opam-version: "1.2"
name: "udunits"
version: "0.2.0"
maintainer: "hez@0ok.org"
authors: [ "Hezekiah M. Carty" ]
license: "MIT"
homepage: "https://github.com/hcarty/ocaml-udunits"
tags: [ "clib:udunits2" "clib:m" "clib:expat"  ]
build: [[ "jbuilder" "build" "-p" name "-j" jobs ]]
depends: [
  "jbuilder" {build & >= "1.0+beta20"}
]
depexts: [
  [["debian"] ["libudunits2-dev" "libexpat1-dev"]]
  [["ubuntu"] ["libudunits2-dev" "libexpat1-dev"]]
  [["osx" "homebrew"] ["udunits" "expat"]]
]
dev-repo: "git://github.com/hcarty/ocaml-udunits"
